--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,10 @@
         "@tippyjs/react": "4.2.6",
         "antd": "^4.23.6",
         "aos": "^2.3.4",
-        "axios": "^1.1.3",
+        "axios": "^1.7.9",
         "bootstrap": "^5.2.2",
         "bootstrap-icons": "^1.9.1",
+        "cloudinary": "^2.5.1",
         "formik": "^2.2.9",
         "i": "^0.3.7",
         "lodash": "^4.17.21",
@@ -53,7 +54,6 @@
         "web-vitals": "^2.1.4",
         "yup": "^0.32.11"
     },
-    
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
@@ -77,5 +77,10 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.16"
     }
 }
