--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,8 @@ DB_PASSWORD=1234
 ACCESS_TOKEN_SECRET=qwertyuiop
 CLIENT_URL=http://localhost:3000
 PORT=5000
+
+
+CLOUDARY_NAME = degfccw8e
+CLOUDARY_API_KEY = 277486219537327
+CLOUDARY_SECRET = ZDRQSLlfaHs-dATu1PFpER-l5YE
