--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
         "@stripe/react-stripe-js": "^3.0.0",
         "@stripe/stripe-js": "^5.2.0",
         "argon2": "^0.30.1",
+        "cloudinary": "^2.5.1",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "esm": "^3.2.25",
