--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
         "axios": "^1.7.9",
         "bootstrap": "^5.2.2",
         "bootstrap-icons": "^1.9.1",
+        "chart.js": "^4.4.7",
         "cloudinary": "^2.5.1",
         "formik": "^2.2.9",
         "i": "^0.3.7",
@@ -32,6 +33,7 @@
         "react": "^18.2.0",
         "react-18-image-lightbox": "^5.1.4",
         "react-bootstrap": "^2.5.0",
+        "react-chartjs-2": "^5.2.0",
         "react-date-range": "^1.4.0",
         "react-datepicker": "^4.8.0",
         "react-dom": "^18.2.0",
